--- a/identy.css
+++ b/identy.css
@@ -48,9 +48,13 @@
 }
   
   @font-face {
-      font-family:'Univers LT Std-XBlackObl';
-      src:url('font/UniversLTStd-XBlackObl.otf')
+      font-family:'JosefinSans';
+      src:url('font/JosefinSans-VariableFont_wght.ttf')
   }
+  @font-face {
+    font-family:'JosefinSlab';
+    src:url('font/JosefinSlab-VariableFont_wght.ttf')
+}
   
   /*
   .h1{
@@ -90,19 +94,19 @@
   
   .scroll{
       position: fixed;
-      font-family:'Univers LT Std-XBlackObl';
-      text-shadow: 0.7px 0.7px 0.7px rgb(255, 255, 255), 0 0 1em rgb(0, 0, 0), 0 0 0.2em rgb(0, 0, 0);
+      font-family:'JosefinSlab';
+      text-shadow: 0.7px 0.7px 0.7px rgb(255, 255, 255), 0 0 1em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
       
       width:calc(100%+400px);
       left: 0px;
       display:flex;
       z-index: 6;
-      margin-top: -32px;
+      margin-top: -9px;
   }
   .scroll div{
       position:absolute;
       color:rgb(255, 255, 255);
-      font-size: 65pt;
+      font-size: 90pt;
       
       letter-spacing:0em;
       white-space:nowrap;
@@ -134,31 +138,29 @@
   }
   
   h2{
-      font-family:'Univers LT Std-XBlackObl';
+      font-family:'JosefinSans';
       white-space: nowrap;
       position: absolute;
-      transform: translate(0,-563px);
+      transform: translate(0,-540px);
       font-size: 65pt;
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   h3{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,-478px);
+      transform: translate(0,-459px);
       color: rgb(255, 255, 255);
       text-shadow: 0.7px 0.7px 0.7px rgb(255, 255, 255), 0 0 1em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
-      /*-webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;*/
+      font-weight: bold;
       z-index: 4;
   }
 
   .name1{
-    font-family:'UniversLTStd-Obl';
+    font-family:'JosefinSlab-Italic';
     font-size: 14pt;
     position: absolute;
     transform: translate(0,-309px);
@@ -167,7 +169,7 @@
   }
 
   .name2{
-    font-family:'UniversLTStd-Obl';
+    font-family:'JosefinSlab-Italic';
     font-size: 14pt;
     position: absolute;
     transform: translate(0,-289px);
@@ -176,193 +178,176 @@
   }
 
   @font-face {
-    font-family:'Helvetica-regular';
-    src:url('font/Helvetica.ttf')
+    font-family:'JosefinSlab-Italic';
+    src:url('font/JosefinSlab-Italic-VariableFont_wght.ttf')
 }
 
   .intro{
-    font-family: Helvetica, sans-serif;
+    font-family:'JosefinSlab';
     font-size: 16.5pt;
     width: 35%;
     position: absolute;
-    transform: translate(0,-20px);
+    transform: translate(0,-7px);
     color: #ffffff;
    /* text-shadow: 0.7px 0.7px 0.7px rgb(66, 66, 66), 0 0 1em rgb(66, 66, 66), 0 0 2em rgb(66, 66, 66);*/
     z-index: 4;
   }
   
   h4{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,93px);
+      transform: translate(0,117px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   h5{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,163px);
+      transform: translate(0,186px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   h6{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,207px);
+      transform: translate(0,230px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   .one{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,509px);
+      transform: translate(0,532px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   .two{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,522px);
+      transform: translate(0,546px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   .three{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,622px);
+      transform: translate(0,646px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   .four{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,722px);
+      transform: translate(0,746px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   .five{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,822px);
+      transform: translate(0,846px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   .six{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,922px);
+      transform: translate(0,946px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   .seven{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,1022px);
+      transform: translate(0,1046px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   .eight{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,1122px);
+      transform: translate(0,1146px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   .nine{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,1222px);
+      transform: translate(0,1246px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   .ten{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,1322px);
+      transform: translate(0,1346px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   .eleven{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,1422px);
+      transform: translate(0,1446px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   .twelve{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,1522px);
+      transform: translate(0,1546px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;  
   }
-  
-  @font-face {
-      font-family:'UniversLTStd-Obl';
-      src:url('font/UniversLTStd-Obl.otf');
-  }
+
+
+
   
   .sen1{
-      font-family:'UniversLTStd-Obl';
+      font-family:'JosefinSlab-Italic';
       font-style: oblique;
       font-size: 16.5pt;
       position: absolute;
@@ -373,7 +358,7 @@
   }
   
   .sen2{
-      font-family:'UniversLTStd-Obl';
+      font-family:'JosefinSlab-Italic';
       font-size: 16.5pt;
       position: absolute;
       transform: translate(1347px,-345px);
@@ -383,120 +368,120 @@
   }
   
   .sen3{
-      font-family:'UniversLTStd-Obl';
+      font-family:'JosefinSlab-Italic';
       font-size: 16.5pt;
       position: absolute;
-      transform: translate(1388px,254px);
+      transform: translate(1388px,258px);
       color: rgb(255, 255, 255);
       text-shadow: 1px 1px 1px rgb(100, 100, 100), 0 0 0.7em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
       z-index: 2;
   }
   
   .sen4{
-      font-family:'UniversLTStd-Obl';
+      font-family:'JosefinSlab-Italic';
       font-size: 16.5pt;
       position: absolute;
-      transform: translate(1378px,354px);
+      transform: translate(1378px,358px);
       color: rgb(255, 255, 255);
       text-shadow: 1px 1px 1px rgb(100, 100, 100), 0 0 0.7em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
       z-index: 2;
   }
   
   .sen5{
-      font-family:'UniversLTStd-Obl';
+      font-family:'JosefinSlab-Italic';
       font-size: 16.5pt;
       position: absolute;
-      transform: translate(1347px,454px);
+      transform: translate(1347px,458px);
       color: rgb(255, 255, 255);
       text-shadow: 1px 1px 1px rgb(100, 100, 100), 0 0 0.7em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
       z-index: 2;
   }
   
   .sen6{
-      font-family:'UniversLTStd-Obl';
+      font-family:'JosefinSlab-Italic';
       font-size: 16.5pt;
       position: absolute;
-      transform: translate(1382px,554px);
+      transform: translate(1382px,558px);
       color: rgb(255, 255, 255);
       text-shadow: 1px 1px 1px rgb(100, 100, 100), 0 0 0.7em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
       z-index: 2;
   }
   
   .sen7{
-      font-family:'UniversLTStd-Obl';
+      font-family:'JosefinSlab-Italic';
       font-size: 16.5pt;
       position: absolute;
-      transform: translate(1347px,654px);
+      transform: translate(1347px,658px);
       color: rgb(255, 255, 255);
       text-shadow: 1px 1px 1px rgb(100, 100, 100), 0 0 0.7em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
       z-index: 2;
   }
   
   .sen8{
-      font-family:'UniversLTStd-Obl';
+      font-family:'JosefinSlab-Italic';
       font-size: 16.5pt;
       position: absolute;
-      transform: translate(1388px,754px);
+      transform: translate(1388px,758px);
       color: rgb(255, 255, 255);
       text-shadow: 1px 1px 1px rgb(100, 100, 100), 0 0 0.7em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
       z-index: 2;
   }
   
   .sen9{
-      font-family:'UniversLTStd-Obl';
+      font-family:'JosefinSlab-Italic';
       font-size: 16.5pt;
       position: absolute;
-      transform: translate(1388px,854px);
+      transform: translate(1388px,858px);
       color: rgb(255, 255, 255);
       text-shadow: 1px 1px 1px rgb(100, 100, 100), 0 0 0.7em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
       z-index:2;
   }
   
   .sen10{
-      font-family:'UniversLTStd-Obl';
+      font-family:'JosefinSlab-Italic';
       font-size: 16.5pt;
       position: absolute;
-      transform: translate(1378px,954px);
+      transform: translate(1378px,958px);
       color: rgb(255, 255, 255);
       text-shadow: 1px 1px 1px rgb(100, 100, 100), 0 0 0.7em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
       z-index:2;
   }
   
   .sen11{
-      font-family:'UniversLTStd-Obl';
+      font-family:'JosefinSlab-Italic';
       font-size: 16.5pt;
       position: absolute;
-      transform: translate(1358px,1054px);
+      transform: translate(1358px,1058px);
       color: rgb(255, 255, 255);
       text-shadow: 1px 1px 1px rgb(100, 100, 100), 0 0 0.7em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
       z-index:2;
   }
   
   .sen12{
-      font-family:'UniversLTStd-Obl';
+      font-family:'JosefinSlab-Italic';
       font-size: 16.5pt;
       position: absolute;
-      transform: translate(1347px,1154px);
+      transform: translate(1347px,1158px);
       color: rgb(255, 255, 255);
       text-shadow: 1px 1px 1px rgb(100, 100, 100), 0 0 0.7em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
       z-index:2;
   }
   
   .sen13{
-      font-family:'UniversLTStd-Obl';
+      font-family:'JosefinSlab-Italic';
       font-size: 16.5pt;
       position: absolute;
-      transform: translate(1382px,1254px);
+      transform: translate(1382px,1258px);
       color: rgb(255, 255, 255);
       text-shadow: 1px 1px 1px rgb(100, 100, 100), 0 0 0.7em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
       z-index:2;
   }
   
   .sen14{
-      font-family:'UniversLTStd-Obl';
+      font-family:'JosefinSlab-Italic';
       font-size: 16.5pt;
       position: absolute;
-      transform: translate(1388px,1354px);
+      transform: translate(1388px,1358px);
       color: rgb(255, 255, 255);
       text-shadow: 1px 1px 1px rgb(100, 100, 100), 0 0 0.7em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
       z-index:2;
@@ -504,30 +489,30 @@
   
   
   .sen15{
-      font-family:'UniversLTStd-Obl';
+      font-family:'JosefinSlab-Italic';
       font-size: 16.5pt;
       position: absolute;
-      transform: translate(1378px,1454px);
+      transform: translate(1378px,1458px);
       color: rgb(255, 255, 255);
       text-shadow: 1px 1px 1px rgb(100, 100, 100), 0 0 0.7em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
       z-index:2;
   }
   
   .sen16{
-      font-family:'UniversLTStd-Obl';
+      font-family:'JosefinSlab-Italic';
       font-size: 16.5pt;
       position: absolute;
-      transform: translate(1382px,1554px);
+      transform: translate(1382px,1558px);
       color: rgb(255, 255, 255);
       text-shadow: 1px 1px 1px rgb(100, 100, 100), 0 0 0.7em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
       z-index:2;
   }
   
   .sen17{
-      font-family:'UniversLTStd-Obl';
+      font-family:'JosefinSlab-Italic';
       font-size: 16.5pt;
       position: absolute;
-      transform: translate(1358px,1654px);
+      transform: translate(1358px,1658px);
       color: rgb(255, 255, 255);
       text-shadow: 1px 1px 1px rgb(100, 100, 100), 0 0 0.7em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
       z-index:2;
