--- a/roundsharp.css
+++ b/roundsharp.css
@@ -55,9 +55,14 @@
 }
   
   @font-face {
-      font-family:'Univers LT Std-XBlackObl';
-      src:url('font/UniversLTStd-XBlackObl.otf')
+      font-family:'JosefinSans';
+      src:url('font/JosefinSans-VariableFont_wght.ttf')
   }
+
+  @font-face {
+    font-family:'Josefinslab';
+    src:url('font/JosefinSlab-VariableFont_wght.ttf')
+}
   
   /*
   .h1{
@@ -97,19 +102,19 @@
   
   .scroll{
       position: fixed;
-      font-family:'Univers LT Std-XBlackObl';
-      text-shadow: 0.7px 0.7px 0.7px rgb(255, 255, 255), 0 0 1em rgb(0, 0, 0), 0 0 0.2em rgb(0, 0, 0);
+      font-family:'Josefinslab';
+      text-shadow: 0.7px 0.7px 0.7px rgb(255, 255, 255), 0 0 1em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
       
       width:calc(100%+400px);
       left: 0px;
       display:flex;
       z-index: 7;
-      margin-top: -32px;
+      margin-top: -9px;
   }
   .scroll div{
       position:absolute;
       color:rgb(255, 255, 255);
-      font-size: 65pt;
+      font-size: 90pt;
       
       letter-spacing:0em;
       white-space:nowrap;
@@ -141,21 +146,22 @@
   }
   
   h2{
-      font-family:'Univers LT Std-XBlackObl';
+      font-family:'JosefinSans';
       white-space: nowrap;
       position: absolute;
-      transform: translate(0,-563px);
+      transform: translate(0,-527px);
       font-size: 65pt;
       color: rgb(255, 255, 255);
       text-shadow: 0.7px 0.7px 0.7px rgb(255, 255, 255), 0 0 1em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
       /*
       -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
-      z-index: 2;*/
+      -webkit-text-stroke-color: black;*/
+      font-weight: bold;
+      z-index: 2;
   }
 
   .name1{
-    font-family:'UniversLTStd-Obl';
+    font-family:'JosefinSlab-Italic';
     font-size: 14pt;
     position: absolute;
     transform: translate(0,-410px);
@@ -164,7 +170,7 @@
   }
 
   .name2{
-    font-family:'UniversLTStd-Obl';
+    font-family:'JosefinSlab-Italic';
     font-size: 14pt;
     position: absolute;
     transform: translate(0,-390px);
@@ -173,204 +179,181 @@
   }
 
   @font-face {
-    font-family:'Helvetica-regular';
-    src:url('font/Helvetica.ttf')
+    font-family:'JosefinSlab-Italic';
+    src:url('font/JosefinSlab-Italic-VariableFont_wght.ttf')
 }
 
   .intro{
-    font-family: Helvetica, sans-serif;
+    font-family:'Josefinslab';
     font-size: 16.5pt;
     width: 35%;
     position: absolute;
-    transform: translate(0,-180px);
+    transform: translate(0,-145px);
     color: #ffffff;
    /* text-shadow: 0.7px 0.7px 0.7px rgb(66, 66, 66), 0 0 1em rgb(66, 66, 66), 0 0 2em rgb(66, 66, 66);*/
     z-index: 2;
   }
   
   h3{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,22px);
+      transform: translate(0,46px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      letter-spacing: -5px;
+      /*-webkit-text-stroke: 1px;
+      -webkit-text-stroke-color: black;*/
+      font-weight: bold;
       z-index: 2;
   }
   
   h4{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,93px);
+      transform: translate(0,117px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   h5{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,163px);
+      transform: translate(0,187px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   h6{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,207px);
+      transform: translate(0,231px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   .ten{
-    font-family:'Univers LT Std-XBlackObl'; 
+    font-family:'JosefinSans'; 
     font-size: 65pt;
     position: absolute;
-    transform: translate(0,422px);
+    transform: translate(0,1346px);
     color: rgb(255, 255, 255);
-    -webkit-text-stroke: 1px;
-    -webkit-text-stroke-color: black;
+    font-weight: bold;
     z-index: 2;
 }
 
 .one{
-    font-family:'Univers LT Std-XBlackObl'; 
+    font-family:'JosefinSans'; 
     font-size: 65pt;
     position: absolute;
-    transform: translate(0,508px);
+    transform: translate(0,532px);
     color: rgb(255, 255, 255);
-    -webkit-text-stroke: 1px;
-    -webkit-text-stroke-color: black;
+    font-weight: bold;
     z-index: 2;
 }
   .two{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,522px);
+      transform: translate(0,545px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   .three{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,622px);
+      transform: translate(0,646px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   .four{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,722px);
+      transform: translate(0,746px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   .five{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,822px);
+      transform: translate(0,846px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   .six{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,922px);
+      transform: translate(0,946px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   .seven{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,1022px);
+      transform: translate(0,1046px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   .eight{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,1122px);
+      transform: translate(0,1146px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   .nine{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,1222px);
+      transform: translate(0,1246px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
-.ten{
-    font-family:'Univers LT Std-XBlackObl'; 
-    font-size: 65pt;
-    position: absolute;
-    transform: translate(0,1322px);
-    color: rgb(255, 255, 255);
-    -webkit-text-stroke: 1px;
-    -webkit-text-stroke-color: black;
-    z-index: 2;
-}
 
   .eleven{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,1422px);
+      transform: translate(0,1446px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   .twelve{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,1522px);
+      transform: translate(0,1546px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;  
   }
   
