--- a/utopia.css
+++ b/utopia.css
@@ -55,9 +55,14 @@
 
   
   @font-face {
-      font-family:'Univers LT Std-XBlackObl';
-      src:url('font/UniversLTStd-XBlackObl.otf')
+      font-family:'JosefinSans';
+      src:url('font/JosefinSans-VariableFont_wght.ttf')
   }
+
+  @font-face {
+    font-family:'JosefinSlab';
+    src:url('font/JosefinSlab-VariableFont_wght.ttf')
+}
   
   /*
   .h1{
@@ -97,19 +102,19 @@
   
   .scroll{
       position: fixed;
-      font-family:'Univers LT Std-XBlackObl';
-      text-shadow: 0.7px 0.7px 0.7px rgb(255, 255, 255), 0 0 1em rgb(0, 0, 0), 0 0 0.2em rgb(0, 0, 0);
+      font-family:'JosefinSlab';
+      text-shadow: 0.7px 0.7px 0.7px rgb(255, 255, 255), 0 0 1em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
       
       width:calc(100%+400px);
       left: 0px;
       display:flex;
       z-index: 6;
-      margin-top: -32px;
+      margin-top: -9px;
   }
   .scroll div{
       position:absolute;
       color:rgb(255, 255, 255);
-      font-size: 65pt;
+      font-size: 90pt;
       
       letter-spacing:0em;
       white-space:nowrap;
@@ -141,65 +146,62 @@
   }
   
   h2{
-      font-family:'Univers LT Std-XBlackObl';
+      font-family:'JosefinSans';
       white-space: nowrap;
       position: absolute;
-      transform: translate(0,-563px);
+      transform: translate(0,-540px);
       font-size: 65pt;
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   h3{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,-478px);
+      transform: translate(0,-454px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   h4{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,-407px);
+      transform: translate(0,-383px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   h5{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,-337px);
+      transform: translate(0,-341px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   h6{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,-297px);
+      transform: translate(0,-268px);
       color: rgb(255, 255, 255);
       text-shadow: 0.7px 0.7px 0.7px rgb(255, 255, 255), 0 0 1em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
       /*-webkit-text-stroke: 1px;
       -webkit-text-stroke-color: black;
       */
+      font-weight: bold;
       z-index: 4;
   }
 
   .name1{
-    font-family:'UniversLTStd-Obl';
+    font-family:'JosefinSlab-Italic';
     font-size: 14pt;
     position: absolute;
     transform: translate(0,-10px);
@@ -208,7 +210,7 @@
   }
 
   .name2{
-    font-family:'UniversLTStd-Obl';
+    font-family:'JosefinSlab-Italic';
     font-size: 14pt;
     position: absolute;
     transform: translate(0,10px);
@@ -217,150 +219,138 @@
   }
 
   @font-face {
-    font-family:'Helvetica-regular';
-    src:url('font/Helvetica.ttf')
+    font-family:'JosefinSlab-Italic';
+    src:url('font/JosefinSlab-Italic-VariableFont_wght.ttf')
 }
 
   .intro{
-    font-family: Helvetica, sans-serif;
+    font-family:'JosefinSlab';
     font-size: 16.5pt;
     width: 35%;
     position: absolute;
-    transform: translate(0,260px);
+    transform: translate(0,295px);
     color: #ffffff;
    /* text-shadow: 0.7px 0.7px 0.7px rgb(66, 66, 66), 0 0 1em rgb(66, 66, 66), 0 0 2em rgb(66, 66, 66);*/
     z-index: 4;
   }
   
   .one{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,509px);
+      transform: translate(0,532px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   .two{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,522px);
+      transform: translate(0,546px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   .three{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,622px);
+      transform: translate(0,646px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   .four{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,722px);
+      transform: translate(0,746px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   .five{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,822px);
+      transform: translate(0,846px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   .six{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,922px);
+      transform: translate(0,946px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   .seven{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,1022px);
+      transform: translate(0,1046px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   .eight{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,1122px);
+      transform: translate(0,1146px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   .nine{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,1222px);
+      transform: translate(0,1246px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   .ten{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,1322px);
+      transform: translate(0,1346px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   .eleven{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,1422px);
+      transform: translate(0,1446px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;
   }
   
   .twelve{
-      font-family:'Univers LT Std-XBlackObl'; 
+      font-family:'JosefinSans'; 
       font-size: 65pt;
       position: absolute;
-      transform: translate(0,1522px);
+      transform: translate(0,1546px);
       color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
-      -webkit-text-stroke-color: black;
+      font-weight: bold;
       z-index: 2;  
   }
   
@@ -370,48 +360,48 @@
   }
   
   .sen1{
-      font-family:'UniversLTStd-Obl';
+      font-family:'JosefinSlab-Italic';
       font-style: oblique;
       font-size: 16.5pt;
       position: absolute;
-      transform: translate(1320px,-445px);
+      transform: translate(1320px,-442px);
       color: rgb(255, 255, 255);
       text-shadow: 1px 1px 1px rgb(100, 100, 100), 0 0 0.7em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
       z-index: 2;
   }
   
   .sen2{
-      font-family:'UniversLTStd-Obl';
+      font-family:'JosefinSlab-Italic';
       font-size: 16.5pt;
       position: absolute;
-      transform: translate(1347px,-345px);
+      transform: translate(1347px,-342px);
       color: rgb(255, 255, 255);
       text-shadow: 1px 1px 1px rgb(100, 100, 100), 0 0 0.7em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
       z-index: 2;
   }
   
   .sen3{
-      font-family:'UniversLTStd-Obl';
+      font-family:'JosefinSlab-Italic';
       font-size: 16.5pt;
       position: absolute;
-      transform: translate(1388px,-245px);
+      transform: translate(1388px,-242px);
       color: rgb(255, 255, 255);
       text-shadow: 1px 1px 1px rgb(100, 100, 100), 0 0 0.7em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
       z-index: 2;
   }
   
   .sen4{
-      font-family:'UniversLTStd-Obl';
+      font-family:'JosefinSlab-Italic';
       font-size: 16.5pt;
       position: absolute;
-      transform: translate(1378px,-145px);
+      transform: translate(1378px,-142px);
       color: rgb(255, 255, 255);
       text-shadow: 1px 1px 1px rgb(100, 100, 100), 0 0 0.7em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
       z-index: 2;
   }
   
   .sen5{
-      font-family:'UniversLTStd-Obl';
+      font-family:'JosefinSlab-Italic';
       font-size: 16.5pt;
       position: absolute;
       transform: translate(1347px,447px);
@@ -421,90 +411,90 @@
   }
   
   .sen6{
-      font-family:'UniversLTStd-Obl';
+      font-family:'JosefinSlab-Italic';
       font-size: 16.5pt;
       position: absolute;
-      transform: translate(1382px,554px);
+      transform: translate(1382px,558px);
       color: rgb(255, 255, 255);
       text-shadow: 1px 1px 1px rgb(100, 100, 100), 0 0 0.7em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
       z-index: 2;
   }
   
   .sen7{
-      font-family:'UniversLTStd-Obl';
+      font-family:'JosefinSlab-Italic';
       font-size: 16.5pt;
       position: absolute;
-      transform: translate(1347px,654px);
+      transform: translate(1347px,658px);
       color: rgb(255, 255, 255);
       text-shadow: 1px 1px 1px rgb(100, 100, 100), 0 0 0.7em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
       z-index: 2;
   }
   
   .sen8{
-      font-family:'UniversLTStd-Obl';
+      font-family:'JosefinSlab-Italic';
       font-size: 16.5pt;
       position: absolute;
-      transform: translate(1388px,754px);
+      transform: translate(1388px,758px);
       color: rgb(255, 255, 255);
       text-shadow: 1px 1px 1px rgb(100, 100, 100), 0 0 0.7em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
       z-index: 2;
   }
   
   .sen9{
-      font-family:'UniversLTStd-Obl';
+      font-family:'JosefinSlab-Italic';
       font-size: 16.5pt;
       position: absolute;
-      transform: translate(1388px,854px);
+      transform: translate(1388px,858px);
       color: rgb(255, 255, 255);
       text-shadow: 1px 1px 1px rgb(100, 100, 100), 0 0 0.7em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
       z-index:2;
   }
   
   .sen10{
-      font-family:'UniversLTStd-Obl';
+      font-family:'JosefinSlab-Italic';
       font-size: 16.5pt;
       position: absolute;
-      transform: translate(1378px,954px);
+      transform: translate(1378px,958px);
       color: rgb(255, 255, 255);
       text-shadow: 1px 1px 1px rgb(100, 100, 100), 0 0 0.7em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
       z-index:2;
   }
   
   .sen11{
-      font-family:'UniversLTStd-Obl';
+      font-family:'JosefinSlab-Italic';
       font-size: 16.5pt;
       position: absolute;
-      transform: translate(1358px,1054px);
+      transform: translate(1358px,1058px);
       color: rgb(255, 255, 255);
       text-shadow: 1px 1px 1px rgb(100, 100, 100), 0 0 0.7em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
       z-index:2;
   }
   
   .sen12{
-      font-family:'UniversLTStd-Obl';
+      font-family:'JosefinSlab-Italic';
       font-size: 16.5pt;
       position: absolute;
-      transform: translate(1347px,1154px);
+      transform: translate(1347px,1158px);
       color: rgb(255, 255, 255);
       text-shadow: 1px 1px 1px rgb(100, 100, 100), 0 0 0.7em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
       z-index:2;
   }
   
   .sen13{
-      font-family:'UniversLTStd-Obl';
+      font-family:'JosefinSlab-Italic';
       font-size: 16.5pt;
       position: absolute;
-      transform: translate(1382px,1254px);
+      transform: translate(1382px,1258px);
       color: rgb(255, 255, 255);
       text-shadow: 1px 1px 1px rgb(100, 100, 100), 0 0 0.7em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
       z-index:2;
   }
   
   .sen14{
-      font-family:'UniversLTStd-Obl';
+      font-family:'JosefinSlab-Italic';
       font-size: 16.5pt;
       position: absolute;
-      transform: translate(1388px,1354px);
+      transform: translate(1388px,1358px);
       color: rgb(255, 255, 255);
       text-shadow: 1px 1px 1px rgb(100, 100, 100), 0 0 0.7em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
       z-index:2;
@@ -512,30 +502,30 @@
   
   
   .sen15{
-      font-family:'UniversLTStd-Obl';
+      font-family:'JosefinSlab-Italic';
       font-size: 16.5pt;
       position: absolute;
-      transform: translate(1378px,1454px);
+      transform: translate(1378px,1458px);
       color: rgb(255, 255, 255);
       text-shadow: 1px 1px 1px rgb(100, 100, 100), 0 0 0.7em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
       z-index:2;
   }
   
   .sen16{
-      font-family:'UniversLTStd-Obl';
+      font-family:'JosefinSlab-Italic';
       font-size: 16.5pt;
       position: absolute;
-      transform: translate(1382px,1554px);
+      transform: translate(1382px,1558px);
       color: rgb(255, 255, 255);
       text-shadow: 1px 1px 1px rgb(100, 100, 100), 0 0 0.7em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
       z-index:2;
   }
   
   .sen17{
-      font-family:'UniversLTStd-Obl';
+      font-family:'JosefinSlab-Italic';
       font-size: 16.5pt;
       position: absolute;
-      transform: translate(1358px,1654px);
+      transform: translate(1358px,1658px);
       color: rgb(255, 255, 255);
       text-shadow: 1px 1px 1px rgb(100, 100, 100), 0 0 0.7em rgb(255, 255, 255), 0 0 0.2em rgb(255, 255, 255);
       z-index:2;
